requests-app/main/default/objects/Request__c/Request__c.object-meta.xml
<CustomObject>
    <description>An object used to track and coordinate internal requests</description>
    <label>Request</label>
    <nameField>
        <displayFormat>REQ{000000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>