requests-app/main/default/objects/Request__c/fields/Actual__c.field-meta.xml
<CustomField>
    <fullName>Actual__c</fullName>
    <inlineHelpText>Actual time spent in hours</inlineHelpText>
    <label>Actual</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>