requests-app/main/default/objects/Request__c/fields/Estimate__c.field-meta.xml
<CustomField>
    <fullName>Estimate__c</fullName>
    <inlineHelpText>Estimate of request in hours</inlineHelpText>
    <label>Estimate</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>