requests-app/main/default/objects/Request__c/fields/Estimate_Variance__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Variance__c</fullName>
    <formula>(Actual__c - Estimate__c) / Estimate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Variance of estimate to actual hour spent =&gt; (Actual - Estimate) / Estimate</inlineHelpText>
    <label>Estimate Variance</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>