requests-app/main/default/objects/Request__c/fields/Justification__c.field-meta.xml
<CustomField>
    <fullName>Justification__c</fullName>
    <inlineHelpText>What is the ROI of this request? Why should we prioritize it over others? What is the impact of not completing this?</inlineHelpText>
    <label>Justification/Impact</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>