requests-app/main/default/objects/Request__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SEV1</fullName>
            </value>
            <value>
                <fullName>SEV2</fullName>
            </value>
            <value>
                <fullName>SEV3</fullName>
            </value>
            <value>
                <fullName>Nice To Have</fullName>
            </value>
            <value>
                <fullName>Moderate Improvement</fullName>
            </value>
            <value>
                <fullName>Large Improvement</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>