requests-app/main/default/objects/Request__c/recordTypes/Enhancement.recordType-meta.xml
<RecordType>
    <fullName>Enhancement</fullName>
    <active>true</active>
    <description>Change to the standard system that is not part of the current functionality</description>
    <label>Enhancement</label>
</RecordType>