requests-app/main/default/objects/Request__c/recordTypes/Issue.recordType-meta.xml
<RecordType>
    <fullName>Issue</fullName>
    <active>true</active>
    <description>A situation where the system is not working as expected</description>
    <label>Issue</label>
</RecordType>