requests-app/main/default/objects/Request__c/recordTypes/Maintenance.recordType-meta.xml
<RecordType>
    <fullName>Maintenance</fullName>
    <active>true</active>
    <description>Tasks to keep the system efficient and functional</description>
    <label>Maintenance</label>
</RecordType>