requests-app/main/default/objects/Request__c/listViews/My_Open_Requests.listView-meta.xml
<ListView>
    <fullName>My_Open_Requests</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>!My Open Requests</label>
</ListView>