requests-app/main/default/objects/Request__c/listViews/Open_Requests.listView-meta.xml
<ListView>
    <fullName>Open_Requests</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Complete,Cancelled</value>
    </filters>
    <label>!Open Requests</label>
</ListView>