requests-app/main/default/objects/Request__c/listViews/Unassigned_Requests_Request.listView-meta.xml
<ListView>
    <fullName>Unassigned_Requests_Request</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <columns>Requested_By__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <label>!Unassigned Requests</label>
    <queue>Unassigned_Requests</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>